# emergent_steering_behaviours

./: Bot.cpp  Bot.h  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  Entity.cpp  Entity.h  Main.cpp  Matrix.cpp  Matrix.h  Params.cpp  Params.h  README.md  SteeringController.cpp  SteeringController.h  Vector2.h  World.h  params.txt
tests/: CMakeLists.txt  Vector2_tests.cpp
